# SR-FastAPI

./: .env.sample  Dockerfile  README.md  pyproject.toml
src/: app.py  constants.py  enums.py  event_handlers.py  models.py  schemas.py  settings.py  utils.py
src/api/: __init__.py  inference.py
